--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter App</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
   
 </head>
 <body>
@@ -29,6 +29,6 @@
 
     </div>
     
-    <script src="../js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
